feat: move Story Arc wizard to RivalryDetailView with full-screen dialog
- New RivalryDetailView (@Route(rivalry/{id})) shows wrestler names, heat, notes, dates; includes a primary Story Arc button for bookers
- FeudScriptWizardDialog upgraded to full-screen (min(1100px,95vw) width, min(90vh) height, draggable, resizable, non-modal) with wider beat-row combos and taller notes TextArea
- RivalryListView rows are now clickable (navigate to detail view); the inline Story Arc grid column and its three supporting services (FeudScriptService, SegmentTypeService, SegmentRuleService) are removed
- RivalryListViewTest updated to match the trimmed 5-arg constructor

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PSxnmqb2nhiVia6SMZ5UCk